<resources>
    <string name="app_name">MockForm</string>
    <string name="textViewForName">NAME:</string>
    <string name="textViewForAddress">ADDRESS:</string>
    <string name="textViewForCity">CITY:</string>
    <string name="textViewForState">STATE:</string>
    <string-array name="states_array">
        <item>Alabama</item>
        <item>Alaska</item>
        <item>Arizona</item>
        <item>Arkansas</item>
        <item>California</item>
        <item>Colorado</item>
        <item>Connecticut</item>
        <item>Delaware</item>
        <item>District of Columbia,DC</item>
        <item>Florida</item>
        <item>Georgia</item>
        <item>Hawaii</item>
        <item>Idaho</item>
        <item>Illinois</item>
        <item>Indiana</item>
        <item>Iowa</item>
        <item>Kansas</item>
        <item>Kentucky</item>
        <item>Louisiana</item>
        <item>Maine</item>
        <item>Maryland</item>
        <item>Massachusetts</item>
        <item>Michigan</item>
        <item>Minnesota</item>
        <item>Mississippi</item>
        <item>Missouri</item>
        <item>Montana</item>
        <item>Nebraska</item>
        <item>Nevada</item>
        <item>New Hampshire</item>
        <item>New Jersey</item>
        <item>New Mexico</item>
        <item>New York</item>
        <item>North Carolina</item>
        <item>North Dakota</item>
        <item>Ohio</item>
        <item>Oklahoma</item>
        <item>Oregon</item>
        <item>Pennsylvania</item>
        <item>Rhode Island</item>
        <item>South Carolina</item>
        <item>South Dakota</item>
        <item>Tennessee</item>
        <item>Texas</item>
        <item>Utah</item>
        <item>Vermont</item>
        <item>Virginia</item>
        <item>Washington</item>
        <item>West Virginia</item>
        <item>Wisconsin</item>
        <item>Wyoming</item>
    </string-array>
    <string name="textViewForZipCode">ZIP CODE:</string>
    <string name="textViewForGender">GENDER:</string>
    <string name="textViewForShift">SHIFT:</string>
    <string name="textViewForSettings">Settings</string>
    <string name="radioButtonForFemale" >Female</string>
    <string name="radioButtonForMale">Male</string>
    <string name="radioButtonForNoAnswer">Prefer Not To Answer</string>
    <string name="checkBoxForMorningShift">Morning</string>
    <string name="checkBoxForAfternoonShift">Afternoon</string>
    <string name="checkBoxForEveningShift">Evening</string>
</resources>
